# grouper-desktop

./: .gitignore  LICENSE  README.md  init-vite-tauri.sh  start-dev.sh
src/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  default_11369545502340012223_0.profraw  default_11960820357934255881_0.profraw  default_14599453936483994337_0.profraw  default_15922827779141133889_0.profraw  default_2630491087834623023_0.profraw  default_4654422252631137381_0.profraw  default_5522338351335120074_0.profraw  default_670099318620789784_0.profraw  default_6714342775094946291_0.profraw  default_8026321709856461488_0.profraw  tauri.conf.json
src-tauri/src/: ffi.rs  lambda.rs  lib.rs  main.rs  s3.rs
src/app/: App.css  App.tsx  Test.tsx  Types.ts  index.css  main.tsx  style.css
src/app/api/: index.ts
src/app/components/: ClassList.css  ClassList.tsx  Content.tsx  DisplayControls.tsx  GroupsView.tsx  StudentCard.tsx  StudentView.tsx  Test.tsx
src/app/components/Btns/: FieldBtn.tsx  UploadExpander.tsx
src/app/components/ClassList/: ClassList.css  ClassList.tsx
src/app/components/DisplayControls/: DisplayControls.tsx  styles.css
src/app/components/Groups/: Groups.css  Groups.tsx
src/app/components/Header/: Header.css  Header.tsx
src/app/components/Icons/: index.tsx
src/app/components/Inputs/: Upload.css  Upload.tsx
src/app/components/Navigation/: Navigation.css  (+1 more)
src/app/context/: FileContext.tsx
src/app/hooks/: useHover.tsx
src/app/store/: Store.ts
src/app/utils/: HoverTooltip.tsx  parse.ts
(+11 files in other folders)
