[package]
name = "src-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["Joshua Diehl"]
license = "MIT"
repository = "https://github.com/JaynewDee/grouper-desktop"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }
aws-config = "0.54.1"
aws-sdk-s3 = "0.24.0"
aws-smithy-http = "0.54.1"
tokio = { version = "1.25", features = ["full"] }
bytes = "1"
csv = "1.1"
rand = "0.8.5"
thiserror = "1.0"
 


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]


# WARNING
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
